--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <style>
      body{
          text-align: center;
-         background-image: linear-gradient(rgb(13, 175, 177), rgb(222, 222, 222));
+         background-image: linear-gradient(rgb(229, 103, 23), rgb(222, 222, 222));
          min-width: 100%;
          min-height: 100%;
       }
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1>My Websitkomoke</h1>
+<h1>My Website</h1>
 
 
 
