--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 
 <body>
 <h1>My Website</h1>
-
-
+<h2>
+MY website is about formula one
+</h2>
+<h2>
+what is formula one?
+</h2>
+<h3>
+Formula One is a motorsport in which different teams compete in multiple Grand Prix races. Each team engineers its own Formula One car which drivers race around a track. Races take place in different countries around the world, with the most famous including Monaco, Britain and Japan.
+</h3>
 
 </body>
 
