--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@ MY website is about formula one
 what is formula one?
 </h2>
 <h3>
-Formula One is a motorsport in which different teams compete in multiple Grand Prix races. Each team engineers its own Formula One car which drivers race around a track. Races take place in different countries around the world, with the most famous including Monaco, Britain and Japan.
+Formula One is a motorsport in which different teams compete in multiple Grand Prix races.<br> Each team engineers its own Formula One car which drivers race around a track.<br> Races take place in different countries around the world,<br> with the most famous including Monaco, Britain and Japan.<br>
 </h3>
 
 </body>
 
 </html>
-
