--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@ what is formula one?
 <h3>
 Formula One is a motorsport in which different teams compete in multiple Grand Prix races.<br> Each team engineers its own Formula One car which drivers race around a track.<br> Races take place in different countries around the world,<br> with the most famous including Monaco, Britain and Japan.<br>
 </h3>
-
+<h2>
+How many teams and drivers are there in formula 1?
+</h2> -->
+<h3>
+A total of 20 drivers and 10 teams makes up the current Formula 1 grid, with each outfit fielding two cars. This season, driver experience ranges from multiple world champions Lewis Hamilton, Max Verstappen and Fernando Alonso, to racers in their second seasons such as Oscar Piastri and Logan Sargeant,but Logan left and went to NASCAR.
+</h3>
 </body>
 
 </html>
+
