--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ Formula One is a motorsport in which different teams compete in multiple Grand P
 </h3>
 <h2>
 How many teams and drivers are there in formula 1?
-</h2> -->
+</h2> 
 <h3>
-A total of 20 drivers and 10 teams makes up the current Formula 1 grid, with each outfit fielding two cars. This season, driver experience ranges from multiple world champions Lewis Hamilton, Max Verstappen and Fernando Alonso, to racers in their second seasons such as Oscar Piastri and Logan Sargeant,but Logan left and went to NASCAR.
+A total of 20 drivers and 10 teams makes up the current Formula 1 grid,<br> with each outfit fielding two cars.<br> This season, driver experience ranges from multiple world champions Lewis Hamilton,<br> Max Verstappen and Fernando Alonso, <br>to racers in their second seasons such as Oscar Piastri and Logan Sargeant,but Logan left and went to NASCAR.<br>
 </h3>
 </body>
 
