--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@ How many teams and drivers are there in formula 1?
 <h3>
 A total of 20 drivers and 10 teams makes up the current Formula 1 grid,<br> with each outfit fielding two cars.<br> This season, driver experience ranges from multiple world champions Lewis Hamilton,<br> Max Verstappen and Fernando Alonso, <br>to racers in their second seasons such as Oscar Piastri and Logan Sargeant,but Logan left and went to NASCAR.<br>
 </h3>
+<h2>
+Here are some educational videos about Formula 1
+</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Q-jjZMMxbZs?si=QP8CdLYKPoDodgDR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xTZr2IoXvXk?si=YHGE85rKeG9aBIu0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</h2>
 </body>
 
 </html>
-
