--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@ Here are some educational videos about Formula 1
 <h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xTZr2IoXvXk?si=YHGE85rKeG9aBIu0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </h2>
+<h2>
+What are the teams and who are the drivers for the teams?
+</h2>
+<h3>
+Ferrari,in ferrari we have Carlos Sainz and Charles Leclerc they are number 55 and 16,
+Mclaren,in Mclaren we have Lando Norris(my favorite)and Oscar Piastri they are number 4 and 81,
+Redbull,in Redbull we have a 4 time champioship winner Max Verstappen and Sergio Perez they are number 1 and 11
+Alpine,in alpine we have Esteban Ocon and Pierre Gasly they are number 31 and 10
+Mercedes,in Mercedes we have Lewis Hamilton and George Russel They are number 44 and 63
+Haas,in Haas we have Nico hulkenburg and kevin magnussen they are number 20 and 27
+
+</h3>
 </body>
 
 </html>
