--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@ Here are some educational videos about Formula 1
 What are the teams and who are the drivers for the teams?
 </h2>
 <h3>
-Ferrari,in ferrari we have Carlos Sainz and Charles Leclerc they are number 55 and 16,
-Mclaren,in Mclaren we have Lando Norris(my favorite)and Oscar Piastri they are number 4 and 81,
-Redbull,in Redbull we have a 4 time champioship winner Max Verstappen and Sergio Perez they are number 1 and 11
-Alpine,in alpine we have Esteban Ocon and Pierre Gasly they are number 31 and 10
-Mercedes,in Mercedes we have Lewis Hamilton and George Russel They are number 44 and 63
-Haas,in Haas we have Nico hulkenburg and kevin magnussen they are number 20 and 27
-Aston Martin,In aston martin we have Fernando Alonso and Lance Stroll they are nnumber 14 and 18.
-RB in rb we have Yuki Tsunoda and Liam lawson , they are numbers 22 and 30 
-Kick Sauber , in kick sauber we have Valterri bottas and Zhou Guanyu they are nunumbers 77 and 24
-Williams, in williams we have  Alex albon and franco colapinto numbers 23 and 43
+Ferrari,in ferrari we have Carlos Sainz and Charles Leclerc <br>. they are number 55 and 16,
+Mclaren,in Mclaren we have Lando Norris(my favorite)and Oscar Piastri <br>they are number 4 and 81,
+Redbull,in Redbull we have a 4 time champioship winner Max Verstappen and Sergio Perez<br> they are number 1 and 11
+Alpine,in alpine we have Esteban Ocon and Pierre Gasly <br>they are number 31 and 10
+Mercedes,in Mercedes we have Lewis Hamilton and George Russel <br>They are number 44 and 63
+Haas,in Haas we have Nico hulkenburg and kevin magnussen<br> they are number 20 and 27
+Aston Martin,In aston martin we have Fernando Alonso and Lance Stroll<br> they are nnumber 14 and 18.
+RB in rb we have Yuki Tsunoda and Liam lawson ,<br> they are numbers 22 and 30 
+Kick Sauber , in kick sauber we have Valterri bottas and Zhou Guanyu <br>they are nunumbers 77 and 24
+Williams, in williams we have  Alex albon and franco colapinto<br> they are numbers 23 and 43
 
 </h3>
 </body>
