--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <html>
 <head>
   <style>
@@ -39,6 +41,16 @@ Here are some educational videos about Formula 1
 What are the teams and who are the drivers for the teams?
 </h2>
 <h3>
+Ferrari,in ferrari we have Carlos Sainz and Charles Leclerc they are number 55 and 16,
+Mclaren,in Mclaren we have Lando Norris(my favorite)and Oscar Piastri they are number 4 and 81,
+Redbull,in Redbull we have a 4 time champioship winner Max Verstappen and Sergio Perez they are number 1 and 11
+Alpine,in alpine we have Esteban Ocon and Pierre Gasly they are number 31 and 10
+Mercedes,in Mercedes we have Lewis Hamilton and George Russel They are number 44 and 63
+Haas,in Haas we have Nico hulkenburg and kevin magnussen they are number 20 and 27
+Aston Martin,In aston martin we have Fernando Alonso and Lance Stroll they are nnumber 14 and 18.
+RB in rb we have Yuki Tsunoda and Liam lawson , they are numbers 22 and 30 
+Kick Sauber , in kick sauber we have Valterri bottas and Zhou Guanyu they are nunumbers 77 and 24
+Williams, in williams we have  Alex albon and franco colapinto numbers 23 and 43
 Ferrari,in ferrari we have Carlos Sainz and Charles Leclerc <br>. they are number 55 and 16,
 Mclaren,in Mclaren we have Lando Norris(my favorite)and Oscar Piastri <br>they are number 4 and 81,
 Redbull,in Redbull we have a 4 time champioship winner Max Verstappen and Sergio Perez<br> they are number 1 and 11
@@ -51,6 +63,42 @@ Kick Sauber , in kick sauber we have Valterri bottas and Zhou Guanyu <br>they ar
 Williams, in williams we have  Alex albon and franco colapinto<br> they are numbers 23 and 43
 
 </h3>
+<h2>
+What is the biggest achievement in f1?
+</h2>
+<h3>
+Most Drivers' World Championships.
+
+Lewis Hamilton remains atop the record table alongside Michael Schumacher with seven titles apiece. The German was dominant at the turn of the century, winning five titles on the bounce with Ferrari. These were in addition to his double world championships with Benetton in the '90s.
+</h3>
+<h2>
+What are points in F1?
+</h2>
+<h3>
+Points are awarded to drivers and teams based on where they finish in a race. The winner receives 25 points, the second-place finisher 18 points, with 15, 12, 10, 8, 6, 4, 2 and 1 points for positions 3 through 10, respectively.
+</h3>
+<h2>
+Why do they play a national anthem for pole position winners?
+</h2>
+<h3>
+The question has caught the attention of F1 fans. In every F1 Grand Prix podium celebration, two national anthems are played: one for the winning driver, and the other for their team. The anthem depends on the nationality of the driver and the original country to which the team belongs.
+</h3>
+<h2>
+Why is an f1 car different than any other sports car?
+</h2>
+<h3>
+Aerodynamics. This is one of the most important factors distinguishing them from other cars. The shape of the F1 car is designed in such a way that air resistance at high speed is minimal, and the car is pressed as hard as possible to the track's surface.
+</h3>
+<h2>
+What do the different tyres mean in f1?
+</h2>
+<h3>
+Every race has soft, medium, and hard tyre compounds, and each has its benefits and trade-offs. The soft tyre provides the most grip but isn't durable; the hard tyre will last the longest but isn't as grippy; and the medium tyre offers the best of both without excelling at either.
+</h3>
+
+
+
+
 </body>
 
 </html>
