--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@ Here are some educational videos about Formula 1
 <h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xTZr2IoXvXk?si=YHGE85rKeG9aBIu0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </h2>
+
+<h2>
+Press this button and it will take you onto the formula 1 website 
+</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Button Example</title>
+</head>
+<body>
+
+  <!-- https://www.formula1.com/ -->
+  <button>Click Me!</button>
+
+</body>
+</html>
 <h2>
 What are the teams and who are the drivers for the teams?
 </h2>
